--- a/tox.ini
+++ b/tox.ini
@@ -18,6 +18,5 @@ commands =
 deps =
     ansible==2.3.0
 commands =
-    bash -c 'echo "\$TRAVIS: $TRAVIS"'
-    ansible-galaxy install -r requirements.yml
+    TRAVIS={env:TRAVIS} ansible-galaxy install -r requirements.yml
     bash test/test_playbook.sh {env:test_hostname} {env:privileged}
