--- a/tox.ini
+++ b/tox.ini
@@ -18,5 +18,6 @@ commands =
 deps =
     ansible==2.3.0
 commands =
-    TRAVIS={env:TRAVIS} ansible-galaxy install -r requirements.yml
+    export TRAVIS={env:TRAVIS}
+    ansible-galaxy install -r requirements.yml
     bash test/test_playbook.sh {env:test_hostname} {env:privileged}
