--- a/.travis.yml
+++ b/.travis.yml
@@ -33,7 +33,8 @@ git:
 
 install:
   - pip install tox
-  - apt install source
+  - sudo apt update
+  - sudo apt install source
 
 script:
   - tox -e $TOX_ENV
