--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,10 @@ language: python
 sudo: false
 services:
   - docker
+addons:
+  apt:
+    packages:
+      - source
 matrix:
   include:
     - python: 2.7
@@ -33,8 +37,6 @@ git:
 
 install:
   - pip install tox
-  - sudo apt update
-  - sudo apt install source
 
 script:
   - tox -e $TOX_ENV
