--- a/tox.ini
+++ b/tox.ini
@@ -3,7 +3,7 @@ skipsdist = True
 envlist = playbook, py27-lint
 
 [testenv]
-whitelist_externals = bash source
+whitelist_externals = bash
 passenv = CI TRAVIS USER HOME TRAVIS*
 
 [testenv:py27-lint]
@@ -19,4 +19,4 @@ deps =
     ansible==2.3.0
 commands =
     ansible-galaxy install -r requirements.yml
-    source test/test_playbook.sh {env:test_hostname} {env:privileged}
+    bash -c 'source test/test_playbook.sh {env:test_hostname} {env:privileged}'
