--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,7 @@ matrix:
     - python: 2.7
       env:
         TOX_ENV: py27-lint
+    # CentOS-7 disabled because container can not run services.
     #- python: 2.7
     #  env:
     #    TOX_ENV: playbook
@@ -26,6 +27,11 @@ matrix:
       env:
         TOX_ENV: playbook
         test_hostname: ubuntu-16.04
+        privileged: False
+    - python: 2.7
+      env:
+        TOX_ENV: playbook
+        test_hostname: cluster-test
         privileged: False
 # Submodules required for integration testing with vagrant only, which is not supported by travis.
 git:
