add ansible linting test

--- a/tox.ini
+++ b/tox.ini
@@ -10,8 +10,10 @@ passenv = CI TRAVIS USER HOME TRAVIS*
 deps =
     mkdocs
     yamllint
+    ansible-lint
 commands =
     bash test/yamllinting.sh
+    bash test/ansiblelinting.sh    
     bash test/mkdocs.sh
 
 [testenv:playbook]
