ansible-lint issues

--- a/roles/galaxy-docker/tasks/backups/extractdb.yml
+++ b/roles/galaxy-docker/tasks/backups/extractdb.yml
@@ -16,6 +16,9 @@
 - name: register whether the container is running
   command: "docker ps -a -f name={{galaxy_docker_container_name}}$"
   register: docker_running
+  changed_when: docker_running is defined
+  tags:
+  - skip_ansible_lint # https://github.com/willthames/ansible-lint/pull/292
 
 - name: Show docker inspection results
   debug:
@@ -50,15 +53,18 @@
   register: result
   until: '"online" in result.stdout'
   retries: 20
+  tags:
+  - skip_ansible_lint # https://github.com/willthames/ansible-lint/pull/292
 
 - name: Dump database in export folder
   shell: "docker exec -u {{user}} {{name}} {{command}} >> {{file}}"
+  args:
+    creates: "{{file}}"
   vars:
     name: "{{galaxy_docker_container_name}}"
     command: "pg_dump {{galaxy_docker_container_database_name}} --format={{galaxy_docker_db_format}} -Z {{galaxy_docker_db_compression_level}}"
     user: "{{galaxy_docker_database_user}}"
     file: "{{galaxy_docker_extracted_db_location}}/{{galaxy_docker_extracted_db_filename}}"
-  register: output
   ignore_errors: true
 
 - name: rsync exported db to ansible host
