--- a/roles/galaxy-docker/tasks/prerequisites/galaxyfirewall.yml
+++ b/roles/galaxy-docker/tasks/prerequisites/galaxyfirewall.yml
@@ -16,7 +16,7 @@
 - name: Install ufw firewall.
   package:
     name: ufw
-    state: latest
+    state: present
 
 - name: Copy profile to ufw firewall
   template:
