--- a/roles/galaxy-docker/tasks/provision/import/import.yml
+++ b/roles/galaxy-docker/tasks/provision/import/import.yml
@@ -39,12 +39,16 @@
   register: result
   until: '"online" in result.stdout'
   retries: 20
+  tags:
+  - skip_ansible_lint # https://github.com/willthames/ansible-lint/pull/292
 
 - name: stop galaxy service in container
   command: "docker exec {{name}} {{command}}"
   vars:
     name: "{{galaxy_docker_container_name}}"
     command: "supervisorctl stop galaxy:*"
+  tags:
+  - skip_ansible_lint # Does not create files
 
 - name: Delete old database and create new_empty one
   command: "docker exec -u {{user}} {{name}} {{command}}"
@@ -53,6 +57,7 @@
     command: "psql -f /database_scripts/new_empty_db"
     user: "{{galaxy_docker_database_user}}"
   register: database_created
+  changed_when: '"DROP DATABASE/nCREATE DATABASE" in database_created.stdout'
 
 - name: Database deletion and creation results
   debug:
@@ -64,6 +69,8 @@
     name: "{{galaxy_docker_container_name}}"
     flags: "-d {{galaxy_docker_container_database_name}} {{galaxy_docker_db_input_file_flag}} /database/{{galaxy_docker_imported_db}}"
     user: "{{galaxy_docker_web_user}}"
+  tags:
+  - skip_ansible_lint # Does not create files
 
 - name: stop container
   docker_container:
@@ -92,4 +99,4 @@
   set_fact:
     galaxy_docker_upgrade: True
 - name: Include upgrade procedure
-  include: ../upgrade/main.yml
+  include: ../../upgrade/main.yml
