--- a/roles/galaxy-docker/tasks/provision/installgenomes.yml
+++ b/roles/galaxy-docker/tasks/provision/installgenomes.yml
@@ -64,6 +64,8 @@
   with_items: "{{dbkeys.files}}"
   ignore_errors: yes  # If databases fail galaxy is still restarted so the ones that did not fail are available
   register: result
+  tags:
+    - skip_ansible_lint # does not create files.
 
 - name: Debug ephemeris output
   debug:
