--- a/roles/galaxy-docker/tasks/provision/container_running_check.yml
+++ b/roles/galaxy-docker/tasks/provision/container_running_check.yml
@@ -14,14 +14,12 @@
 - name: register whether the production container is running
   command: "docker ps -q -f name={{galaxy_docker_container_name}}$"
   register: production_container_running
-  tags:
-    - skip_ansible_lint  # https://github.com/willthames/ansible-lint/pull/292
+  changed_when: false
 
 - name: register whether the docker provision container is running
   command: "docker ps -q -f name={{galaxy_docker_provision_container_name}}$"
   register: provision_container_running
-  tags:
-    - skip_ansible_lint  # https://github.com/willthames/ansible-lint/pull/292
+  changed_when: false
 
 - name: Show docker inspection results
   debug:
