--- a/roles/galaxy-docker/tasks/provision/import/import.yml
+++ b/roles/galaxy-docker/tasks/provision/import/import.yml
@@ -39,8 +39,7 @@
   register: result
   until: '"online" in result.stdout'
   retries: 20
-  tags:
-    - skip_ansible_lint  # https://github.com/willthames/ansible-lint/pull/292
+  changed_when: false
 
 - name: stop galaxy service in container
   command: "docker exec {{name}} {{command}}"
