--- a/roles/galaxy-docker/handlers/main.yml
+++ b/roles/galaxy-docker/handlers/main.yml
@@ -11,7 +11,8 @@
 
 # handlers file for galaxy_docker
 
-- import_tasks: restart_galaxy_in_container.yml
+- name: Load restart galaxy in container handler.
+  import_tasks: restart_galaxy_in_container.yml
   become: "{{galaxy_docker_become}}"
   become_user: "{{galaxy_docker_docker_user}}"
   vars:
