--- a/roles/galaxy-docker/tasks/prerequisites/main.yml
+++ b/roles/galaxy-docker/tasks/prerequisites/main.yml
@@ -23,6 +23,8 @@
 - import_tasks: add_user_ssh_keys.yml
   when: galaxy_docker_create_user_ssh_keys
 
+- import_tasks: galaxy_startup_service.yml
+
 - import_tasks: create_export_folder.yml
   when: galaxy_docker_create_export_folder
 
