--- a/roles/galaxy-docker/tasks/prerequisites/galaxy_startup_service.yml
+++ b/roles/galaxy-docker/tasks/prerequisites/galaxy_startup_service.yml
@@ -8,3 +8,14 @@
 # For commercial users or users who do not want to follow the AGPL, please contact us to obtain a separate license.
 #
 # You should have received a copy of the GNU Affero General Public License along with this program. If not, see <http://www.gnu.org/licenses/>.
+
+- name: Add systemd unit file.
+  template:
+    dest: /etc/systemd/system/galaxy.service
+    src: galaxy.service.j2
+    force: yes
+
+- name: Galaxy should be started on reboot.
+  systemd:
+    enabled: yes
+    name: galaxy
