add conditional flag

--- a/roles/galaxy-docker/tasks/prerequisites/main.yml
+++ b/roles/galaxy-docker/tasks/prerequisites/main.yml
@@ -24,6 +24,7 @@
   when: galaxy_docker_create_user_ssh_keys
 
 - import_tasks: galaxy_startup_service.yml
+  when: galaxy_docker_prerequisites_startup_service
 
 - import_tasks: create_export_folder.yml
   when: galaxy_docker_create_export_folder
