only trigger restart when necessary

--- a/roles/galaxy-docker/tasks/start_container/install_python_dependencies.yml
+++ b/roles/galaxy-docker/tasks/start_container/install_python_dependencies.yml
@@ -13,6 +13,7 @@
   command: "docker inspect -f {{inspect}} {{galaxy_docker_container_name}}"
   vars:
     inspect: !unsafe '{{.State.Running}}'
+  changed_when: false
   register: docker_running
 
 - name: Show docker inspection results
@@ -32,8 +33,10 @@
     name: "{{galaxy_docker_container_name}}"
     command: /galaxy_venv/bin/pip install python-ldap -i https://wheels.galaxyproject.org
   register: ldap_python_install
+  changed_when: '"Successfully installed python-ldap" in ldap_python_install.stdout'
   notify: restart galaxy in container
 
 - name: show installationresults
   debug:
     var: ldap_python_install.stdout
+    verbosity: 1
