--- a/roles/galaxy-docker/tasks/provision/start_provision_container.yml
+++ b/roles/galaxy-docker/tasks/provision/start_provision_container.yml
@@ -25,6 +25,7 @@
     dest: "{{galaxy_docker_ansible_generated_vars_dir}}/docker_volumes_provision.yml"
     src: "docker_volumes_provision.yml.j2"
     force: yes
+    trim_blocks: False
   become: no
   delegate_to: 127.0.0.1
 
