--- a/roles/galaxy-docker/tasks/prepare_docker/customimage.yml
+++ b/roles/galaxy-docker/tasks/prepare_docker/customimage.yml
@@ -4,11 +4,14 @@
 # Contact us at: sasc@lumc.nl
 #
 # This file is part of galaxy-docker-ansible.
-# A dual licensing mode is applied.
-# The source code within this project is freely available for non-commercial use under the GNU Affero General Public license.
-# For commercial users or users who do not want to follow the AGPL, please contact us to obtain a separate license.
 #
-# You should have received a copy of the GNU Affero General Public License along with this program. If not, see <http://www.gnu.org/licenses/>.
+# galaxy-docker-ansible is free software: you can redistribute it
+# and/or modify it under the terms of the MIT License (Expat) as
+# published by the Open Source initiative.
+#
+# You should have received a copy of the MIT License (Expat)
+# along with galaxy-docker-ansible. If not, see
+# <https://opensource.org/licenses/MIT>.
 # .....
 
 - name: Create docker build directory
