--- a/roles/installdocker/meta/main.yml
+++ b/roles/installdocker/meta/main.yml
@@ -30,10 +30,7 @@ galaxy_info:
   # - GPLv3
   # - Apache
   # - CC-BY
-  license: "A dual licensing mode is applied.
-            The source code within this project is freely available for non-commercial use under the GNU Affero General Public license.
-            For commercial users or users who do not want to follow the AGPL, please contact us to obtain a separate license.
-            "
+  license: MIT License (expat)
   min_ansible_version: 2.4
 
   # If this a Container Enabled role, provide the minimum Ansible Container version.
