--- a/roles/galaxy-docker/tasks/prepare_docker/main.yml
+++ b/roles/galaxy-docker/tasks/prepare_docker/main.yml
@@ -27,6 +27,7 @@
   when: (galaxy_docker_custom_image or galaxy_docker_change_uids)
 
 - name: Download image when not present
+  docker_image:
     name: "{{galaxy_docker_docker_image}}"
     state: present
 
