--- a/run/patch_custom_image.yml
+++ b/run/patch_custom_image.yml
@@ -14,6 +14,7 @@
 # <https://opensource.org/licenses/MIT>.
 # .....
 
+galaxy_docker_prepare_docker: True
 galaxy_docker_security_patch: True
 galaxy_docker_change_uids: True
 galaxy_docker_custom_image: True
