set custom image to 17.09 base for testing

--- a/test/host_vars/cluster-test/cluster_settings.yml
+++ b/test/host_vars/cluster-test/cluster_settings.yml
@@ -46,3 +46,5 @@ galaxy_docker_cluster_user_destinations:
 
 galaxy_docker_custom_image_lines:
   - run sed -i '3iecho "192.168.99.100 ogs-head" >> /etc/hosts' /usr/bin/startup
+
+bgruening_galaxy_stable_version: 17.09
