--- a/roles/galaxy-docker/defaults/main.yml
+++ b/roles/galaxy-docker/defaults/main.yml
@@ -43,13 +43,14 @@ galaxy_docker_docker_user_groups: docker
 galaxy_docker_docker_image: bgruening/galaxy-stable
 galaxy_docker_environment_file_location: "{{galaxy_docker_docker_user_home}}/galaxydocker.env"
 galaxy_docker_export_location: "/data/galaxy/galaxy_storage"
-galaxy_docker_export_location_mode: "0755"  # If not accessible for all users (--x) then postgres does not work.
+# If not accessible for all users (--x) then postgres does not work.
+galaxy_docker_export_location_mode: "0755"
 galaxy_docker_container_name: galaxy
 galaxy_docker_provision_container_name: galaxy-provision
 galaxy_docker_container_hostname: galaxy-docker
 galaxy_docker_extra_volumes: ""
 galaxy_docker_docker_build_dir: "{{galaxy_docker_docker_user_home}}/docker_build/"
-bgruening_galaxy_stable_version: master
+bgruening_galaxy_stable_version: dev
 galaxy_docker_docker_image_changed_uids: "galaxy_stable_changed_uids:{{bgruening_galaxy_stable_version}}"
 # firewall, nginx and ports
 galaxy_docker_ufw_profile: galaxy
@@ -124,9 +125,12 @@ galaxy_docker_cluster_user_destinations: {}
 ## Defaults are to use custom format. Which is compressed and uses pg_restore to recover.
 ## If format is set to plain, it is by default not compressed and psql is used to recover.
 galaxy_docker_db_format: "custom"  # other options 'plain' and 'tar'
-galaxy_docker_db_compression_level: "{{(galaxy_docker_db_format=='custom') | ternary('6','0')}}"
-galaxy_docker_db_restore_command: "{{(galaxy_docker_db_format=='plain') | ternary('psql','pg_restore -v')}}"
-galaxy_docker_db_input_file_flag: "{{(galaxy_docker_db_format=='plain') | ternary('-f','')}}"
+galaxy_docker_db_compression_level:
+  "{{(galaxy_docker_db_format=='custom') | ternary('6','0')}}"
+galaxy_docker_db_restore_command:
+  "{{(galaxy_docker_db_format=='plain') | ternary('psql','pg_restore -v')}}"
+galaxy_docker_db_input_file_flag:
+  "{{(galaxy_docker_db_format=='plain') | ternary('-f','')}}"
 
 galaxy_docker_extracted_db_filename: "galaxy_database.{{ansible_date_time.iso8601}}.dump"
 galaxy_docker_extracted_db_location: "{{galaxy_docker_docker_user_home}}/database_extract"
@@ -144,7 +148,8 @@ galaxy_docker_dbkeys_dir: "/tmp/galaxy_dkeys_lists"
 galaxy_docker_genome_copy_links: yes
 galaxy_docker_genomes_dest: "{{galaxy_docker_export_location}}/genomes"
 
-# Ephemeris can be installed from git if extra functionality is needed which is not in the pypi package yet.
+# Ephemeris can be installed from git if extra functionality
+# is needed which is not in the pypi package yet.
 galaxy_docker_ephemeris_repo: "https://github.com/galaxyproject/ephemeris.git"
 galaxy_docker_ephemeris_branch: "master"
 galaxy_docker_ephemeris_dir: "{{galaxy_docker_docker_user_home}}/ephemeris"
@@ -152,8 +157,9 @@ galaxy_docker_ephemeris_from_git: False
 
 #defaults for upgrade
 galaxy_docker_test_upgrade: False
-galaxy_docker_upgrade_overwrite_config_files: False  #Overwrites old config files with new distribution_config files
 
+#Overwrites old config files with new distribution_config files
+galaxy_docker_upgrade_overwrite_config_files: False
 
 galaxy_docker_run_privileged: True
 # Run
