--- a/roles/galaxy-docker/tasks/provision/import/import.yml
+++ b/roles/galaxy-docker/tasks/provision/import/import.yml
@@ -71,7 +71,10 @@
   command: "docker exec -u {{user}} {{name}} {{galaxy_docker_db_restore_command}} {{flags}}"
   vars:
     name: "{{galaxy_docker_container_name}}"
-    flags: "-d {{galaxy_docker_container_database_name}} {{galaxy_docker_db_input_file_flag}} /database/{{galaxy_docker_imported_db}}"
+    flags: >
+      -d {{galaxy_docker_container_database_name}}
+      {{galaxy_docker_db_input_file_flag}}
+      /database/{{galaxy_docker_imported_db}}
     user: "{{galaxy_docker_web_user}}"
   tags:
     - skip_ansible_lint  # Does not create files
