--- a/host_vars/cluster_example_host/cluster_settings.yml
+++ b/host_vars/cluster_example_host/cluster_settings.yml
@@ -10,7 +10,8 @@ galaxy_docker_shared_cluster_directory: "/exports/galaxy"
 galaxy_docker_cluster_registered_user_concurrent_jobs: 2
 galaxy_docker_cluster_anonymous_user_concurrent_jobs: 1
 
-# Set up your cluster destinations. By default galaxy will request only one core and 4 GB memory on the cluster.
+# Set up your cluster destinations. By default galaxy will request only
+# one core and 4 GB memory on the cluster.
 # Here you can set which options are available to galaxy
 galaxy_docker_cluster_destinations:
   cluster_low:
