--- a/roles/galaxy-docker/tasks/backups/cronbackupdb.yml
+++ b/roles/galaxy-docker/tasks/backups/cronbackupdb.yml
@@ -44,13 +44,16 @@
     backup_db_location: "{{galaxy_docker_backup_location}}/{{item.key}}"
     backup_db_dump_file: "galaxy-{{item.key}}-backup$(TZ='UTC' date +'%s.%N')"
     files_to_keep: "{{item.value.files_to_keep}}"
-    compression_level: "{{item.value.compression_level | default(galaxy_docker_db_compression_level)}}"
+    compression_level:
+      "{{item.value.compression_level | default(galaxy_docker_db_compression_level)}}"
     name: "{{item.key}}"
   with_dict: "{{ galaxy_docker_backup_database_cron_jobs }}"
 
 - name: set backup jobs in cron
   cron:
-    job: "bash {{galaxy_docker_backup_location}}/scripts/{{item.key}}-backupscript.sh >> {{log_file}} 2>&1"
+    job: >
+      bash {{galaxy_docker_backup_location}}/scripts/{{item.key}}-backupscript.sh
+      >> {{log_file}} 2>&1
     state: present
     user: "{{galaxy_docker_docker_user}}"
     backup: yes
