--- a/roles/galaxy-docker/tasks/prepare_docker/change_uids.yml
+++ b/roles/galaxy-docker/tasks/prepare_docker/change_uids.yml
@@ -47,7 +47,10 @@
       line: '\1"{{galaxy_docker_database_user_id}}"\3'
     - regexp: '(GALAXY_POSTGRES_GID=)([0-9]*)( \\)'
       line: '\1"{{galaxy_docker_database_group_id}}"\3'
-    - regexp: '^(USER )(galaxy)'  # This has been submitted upstream as a fix. https://github.com/bgruening/docker-galaxy-stable/pull/373
+    # This has been submitted upstream as a fix.
+    # https://github.com/bgruening/docker-galaxy-stable/pull/373
+    # Is fixed from version 17.09
+    - regexp: '^(USER )(galaxy)'
       line: '\1$GALAXY_USER'
 
 - name: Build docker image with changed_uids
