--- a/roles/galaxy-docker/tasks/provision/installtools.yml
+++ b/roles/galaxy-docker/tasks/provision/installtools.yml
@@ -60,11 +60,12 @@
     - "{{tools.files}}"
 
 - name: Use ephemeris shed install to install tools
-  command: "{{galaxy_docker_docker_user_virtualenv}}/bin/shed-install -g {{galaxy}} -a {{api_key}} -t {{tool_list}}"
+  command: >
+    {{galaxy_docker_docker_user_virtualenv}}/bin/shed-install
+    -g localhost:{{galaxy_docker_provision_port}}
+    -a {{galaxy_admin_api_key | default(galaxy_master_api_key)}}
+    -t {{galaxy_docker_tool_dir}}/{{item.path | basename}}
   vars:
-    galaxy: "localhost:{{galaxy_docker_provision_port}}"
-    tool_list: "{{galaxy_docker_tool_dir}}/{{item.path | basename}}"
-    api_key: "{{galaxy_admin_api_key | default(galaxy_master_api_key)}}"
   with_items: "{{tools.files}}"
   ignore_errors: yes
   tags:
